[tool.poetry]
name = "pythonisms"
version = "0.1.0"
description = ""
authors = ["MusaabShalaldeh <musaabsh65@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
flake8 = {version = "^4.0.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
